assgn2/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHAN
    CONSTANT
    DEFER
    FALLTHROUGH
    SELECT
    LMINUS
    AMPCAREQ
    GO
    DDD
    MAP
    INTERFACE

Grammar

Rule 0     S' -> start
Rule 1     start -> Source
Rule 2     Type -> TypeName
Rule 3     Type -> TypeLit
Rule 4     Type -> LPAREN Type RPAREN
Rule 5     TypeName -> TYPEX
Rule 6     TypeLit -> ArrayType
Rule 7     TypeLit -> StructType
Rule 8     TypeLit -> PointerType
Rule 9     TypeLit -> FunctionType
Rule 10    TypeOpt -> Type
Rule 11    TypeOpt -> epsilon
Rule 12    ArrayType -> LBRACK ArrayLength RBRACK ElementType
Rule 13    ArrayLength -> Expression
Rule 14    ElementType -> Type
Rule 15    StructType -> STRUCT LBRACE FieldDeclRep RBRACE
Rule 16    FieldDeclRep -> FieldDeclRep FieldDecl SEMICOL
Rule 17    FieldDeclRep -> epsilon
Rule 18    FieldDecl -> IdentifierList Type TagOpt
Rule 19    TagOpt -> Tag
Rule 20    TagOpt -> epsilon
Rule 21    Tag -> STRING
Rule 22    PointerType -> TIMES BaseType
Rule 23    BaseType -> Type
Rule 24    FunctionType -> FUNC Signature
Rule 25    Signature -> Parameters ResultOpt
Rule 26    ResultOpt -> Result
Rule 27    ResultOpt -> epsilon
Rule 28    Result -> Parameters
Rule 29    Result -> Type
Rule 30    Parameters -> LPAREN ParameterListOpt RPAREN
Rule 31    ParameterListOpt -> ParametersList
Rule 32    ParameterListOpt -> epsilon
Rule 33    ParametersList -> Type
Rule 34    ParametersList -> IdentifierList Type
Rule 35    ParametersList -> ParameterDeclCommaRep
Rule 36    ParameterDeclCommaRep -> ParameterDeclCommaRep COMMA ParameterDecl
Rule 37    ParameterDeclCommaRep -> ParameterDecl COMMA ParameterDecl
Rule 38    ParameterDecl -> IdentifierList Type
Rule 39    ParameterDecl -> Type
Rule 40    Block -> LBRACE StatementList RBRACE
Rule 41    StatementList -> StatementRep
Rule 42    StatementRep -> StatementRep Statement SEMICOL
Rule 43    StatementRep -> epsilon
Rule 44    Declaration -> ConstDecl
Rule 45    Declaration -> TypeDecl
Rule 46    Declaration -> VarDecl
Rule 47    TopLevelDecl -> Declaration
Rule 48    TopLevelDecl -> FunctionDecl
Rule 49    ConstDecl -> CONST ConstSpec
Rule 50    ConstDecl -> CONST LPAREN ConstSpecRep RPAREN
Rule 51    ConstSpecRep -> ConstSpecRep ConstSpec SEMICOL
Rule 52    ConstSpecRep -> epsilon
Rule 53    ConstSpec -> IdentifierList TypeExprListOpt
Rule 54    TypeExprListOpt -> TypeOpt EQUAL ExpressionList
Rule 55    TypeExprListOpt -> epsilon
Rule 56    IdentifierList -> IDENTIFIER IdentifierRep
Rule 57    IdentifierRep -> IdentifierRep COMMA IDENTIFIER
Rule 58    IdentifierRep -> epsilon
Rule 59    TypeDecl -> TYPE TypeSpec
Rule 60    TypeDecl -> TYPE LPAREN TypeSpecRep RPAREN
Rule 61    TypeSpecRep -> TypeSpecRep TypeSpec SEMICOL
Rule 62    TypeSpecRep -> epsilon
Rule 63    TypeSpec -> AliasDecl
Rule 64    TypeSpec -> TypeDef
Rule 65    AliasDecl -> IDENTIFIER EQUAL Type
Rule 66    TypeDef -> IDENTIFIER Type
Rule 67    VarDecl -> VAR VarSpec
Rule 68    VarDecl -> VAR LPAREN VarSpecRep RPAREN
Rule 69    VarSpecRep -> VarSpecRep VarSpec SEMICOL
Rule 70    VarSpecRep -> epsilon
Rule 71    VarSpec -> IdentifierList Type ExpressionListOpt
Rule 72    VarSpec -> IdentifierList EQUAL ExpressionList
Rule 73    ExpressionListOpt -> EQUAL ExpressionList
Rule 74    ExpressionListOpt -> epsilon
Rule 75    ShortVarDecl -> IDENTIFIER COLONEQ Expression
Rule 76    FunctionDecl -> FUNC FunctionName Function
Rule 77    FunctionDecl -> FUNC FunctionName Signature
Rule 78    FunctionName -> IDENTIFIER
Rule 79    Function -> Signature FunctionBody
Rule 80    FunctionBody -> Block
Rule 81    Operand -> Literal
Rule 82    Operand -> OperandName
Rule 83    Operand -> LPAREN Expression RPAREN
Rule 84    Literal -> BasicLit
Rule 85    BasicLit -> INTEGER
Rule 86    BasicLit -> FLOAT
Rule 87    BasicLit -> IMAGINARY
Rule 88    BasicLit -> RUNE
Rule 89    BasicLit -> STRING
Rule 90    OperandName -> IDENTIFIER
Rule 91    Conversion -> Type LPAREN Expression RPAREN
Rule 92    PrimaryExpr -> Operand
Rule 93    PrimaryExpr -> Conversion
Rule 94    PrimaryExpr -> PrimaryExpr Selector
Rule 95    PrimaryExpr -> PrimaryExpr Index
Rule 96    PrimaryExpr -> PrimaryExpr Slice
Rule 97    PrimaryExpr -> PrimaryExpr Arguments
Rule 98    Selector -> DOT IDENTIFIER
Rule 99    Index -> LBRACK Expression RBRACK
Rule 100   Slice -> LBRACK ExpressionOpt COLON ExpressionOpt RBRACK
Rule 101   Arguments -> LPAREN ExpressionListTypeOpt RPAREN
Rule 102   ExpressionListTypeOpt -> ExpressionList
Rule 103   ExpressionListTypeOpt -> epsilon
Rule 104   ExpressionList -> Expression ExpressionRep
Rule 105   ExpressionRep -> ExpressionRep COMMA Expression
Rule 106   ExpressionRep -> epsilon
Rule 107   Expression -> UnaryExpr
Rule 108   Expression -> Expression BinaryOp Expression
Rule 109   ExpressionOpt -> Expression
Rule 110   ExpressionOpt -> epsilon
Rule 111   UnaryExpr -> PrimaryExpr
Rule 112   UnaryExpr -> UnaryOp UnaryExpr
Rule 113   BinaryOp -> OROR
Rule 114   BinaryOp -> AMPAMP
Rule 115   BinaryOp -> RelOp
Rule 116   BinaryOp -> AddOp
Rule 117   BinaryOp -> MulOp
Rule 118   RelOp -> EQEQ
Rule 119   RelOp -> NOTEQ
Rule 120   RelOp -> LESS
Rule 121   RelOp -> GREAT
Rule 122   RelOp -> LEQ
Rule 123   RelOp -> GEQ
Rule 124   AddOp -> PLUS
Rule 125   AddOp -> MINUS
Rule 126   AddOp -> OR
Rule 127   AddOp -> CARET
Rule 128   MulOp -> TIMES
Rule 129   MulOp -> DIVIDE
Rule 130   MulOp -> MOD
Rule 131   MulOp -> AMPERS
Rule 132   MulOp -> LL
Rule 133   MulOp -> GG
Rule 134   MulOp -> AMPCAR
Rule 135   UnaryOp -> PLUS
Rule 136   UnaryOp -> MINUS
Rule 137   UnaryOp -> TIMES
Rule 138   UnaryOp -> AMPERS
Rule 139   UnaryOp -> NOT
Rule 140   Statement -> Declaration
Rule 141   Statement -> LabeledStmt
Rule 142   Statement -> SimpleStmt
Rule 143   Statement -> ReturnStmt
Rule 144   Statement -> BreakStmt
Rule 145   Statement -> ContinueStmt
Rule 146   Statement -> GotoStmt
Rule 147   Statement -> Block
Rule 148   Statement -> IfStmt
Rule 149   Statement -> SwitchStmt
Rule 150   Statement -> ForStmt
Rule 151   SimpleStmt -> epsilon
Rule 152   SimpleStmt -> ExpressionStmt
Rule 153   SimpleStmt -> IncDecStmt
Rule 154   SimpleStmt -> Assignment
Rule 155   SimpleStmt -> ShortVarDecl
Rule 156   LabeledStmt -> Label COLON Statement
Rule 157   Label -> IDENTIFIER
Rule 158   ExpressionStmt -> Expression
Rule 159   IncDecStmt -> Expression PLUSPLUS
Rule 160   IncDecStmt -> Expression MINUSMIN
Rule 161   Assignment -> ExpressionList assign_op ExpressionList
Rule 162   assign_op -> AssignOp
Rule 163   AssignOp -> PLUSEQ
Rule 164   AssignOp -> MINUSEQ
Rule 165   AssignOp -> TIMESEQ
Rule 166   AssignOp -> DIVIDEEQ
Rule 167   AssignOp -> MODEQ
Rule 168   AssignOp -> AMPEQ
Rule 169   AssignOp -> OREQ
Rule 170   AssignOp -> CAREQ
Rule 171   AssignOp -> LLEQ
Rule 172   AssignOp -> GGEQ
Rule 173   AssignOp -> EQUAL
Rule 174   IfStmt -> IF Expression Block ElseOpt
Rule 175   SimpleStmtOpt -> SimpleStmt SEMICOL
Rule 176   SimpleStmtOpt -> epsilon
Rule 177   ElseOpt -> ELSE IfStmt
Rule 178   ElseOpt -> ELSE Block
Rule 179   ElseOpt -> epsilon
Rule 180   SwitchStmt -> ExprSwitchStmt
Rule 181   SwitchStmt -> TypeSwitchStmt
Rule 182   ExprSwitchStmt -> SWITCH ExpressionOpt LBRACE ExprCaseClauseRep RBRACE
Rule 183   ExprCaseClauseRep -> ExprCaseClauseRep ExprCaseClause
Rule 184   ExprCaseClauseRep -> epsilon
Rule 185   ExprCaseClause -> ExprSwitchCase COLON StatementList
Rule 186   ExprSwitchCase -> CASE ExpressionList
Rule 187   ExprSwitchCase -> DEFAULT
Rule 188   TypeSwitchStmt -> SWITCH SimpleStmtOpt TypeSwitchGuard LBRACE TypeCaseClauseOpt RBRACE
Rule 189   TypeSwitchGuard -> IdentifierOpt PrimaryExpr DOT LPAREN TYPE RPAREN
Rule 190   IdentifierOpt -> IDENTIFIER COLONEQ
Rule 191   IdentifierOpt -> epsilon
Rule 192   TypeCaseClauseOpt -> TypeCaseClauseOpt TypeCaseClause
Rule 193   TypeCaseClauseOpt -> epsilon
Rule 194   TypeCaseClause -> TypeSwitchCase COLON StatementList
Rule 195   TypeSwitchCase -> CASE TypeList
Rule 196   TypeSwitchCase -> DEFAULT
Rule 197   TypeList -> Type TypeRep
Rule 198   TypeRep -> TypeRep COMMA Type
Rule 199   TypeRep -> epsilon
Rule 200   ForStmt -> FOR ConditionBlockOpt Block
Rule 201   ConditionBlockOpt -> epsilon
Rule 202   ConditionBlockOpt -> Condition
Rule 203   ConditionBlockOpt -> ForClause
Rule 204   Condition -> Expression
Rule 205   ForClause -> SimpleStmt SEMICOL ConditionOpt SEMICOL SimpleStmt
Rule 206   ConditionOpt -> epsilon
Rule 207   ConditionOpt -> Condition
Rule 208   RangeClause -> ExpressionIdentListOpt RANGE Expression
Rule 209   ExpressionIdentListOpt -> epsilon
Rule 210   ExpressionIdentListOpt -> ExpressionIdentifier
Rule 211   ExpressionIdentifier -> ExpressionList EQUAL
Rule 212   ReturnStmt -> RETURN ExpressionListPureOpt
Rule 213   ExpressionListPureOpt -> ExpressionList
Rule 214   ExpressionListPureOpt -> epsilon
Rule 215   BreakStmt -> BREAK LabelOpt
Rule 216   ContinueStmt -> CONTINUE LabelOpt
Rule 217   LabelOpt -> Label
Rule 218   LabelOpt -> epsilon
Rule 219   GotoStmt -> GOTO Label
Rule 220   Source -> PackageClause SEMICOL ImportDeclRep TopLevelDeclRep
Rule 221   ImportDeclRep -> epsilon
Rule 222   ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL
Rule 223   TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL
Rule 224   TopLevelDeclRep -> epsilon
Rule 225   PackageClause -> PACKAGE PackageName
Rule 226   PackageName -> IDENTIFIER
Rule 227   ImportDecl -> IMPORT ImportSpec
Rule 228   ImportDecl -> IMPORT LPAREN ImportSpecRep RPAREN
Rule 229   ImportSpecRep -> ImportSpecRep ImportSpec SEMICOL
Rule 230   ImportSpecRep -> epsilon
Rule 231   ImportSpec -> PackageNameDotOpt ImportPath
Rule 232   PackageNameDotOpt -> DOT
Rule 233   PackageNameDotOpt -> PackageName
Rule 234   PackageNameDotOpt -> epsilon
Rule 235   ImportPath -> STRING
Rule 236   epsilon -> <empty>

Terminals, with rules where they appear

AMPAMP               : 114
AMPCAR               : 134
AMPCAREQ             : 
AMPEQ                : 168
AMPERS               : 131 138
BREAK                : 215
CAREQ                : 170
CARET                : 127
CASE                 : 186 195
CHAN                 : 
COLON                : 100 156 185 194
COLONEQ              : 75 190
COMMA                : 36 37 57 105 198
CONST                : 49 50
CONSTANT             : 
CONTINUE             : 216
DDD                  : 
DEFAULT              : 187 196
DEFER                : 
DIVIDE               : 129
DIVIDEEQ             : 166
DOT                  : 98 189 232
ELSE                 : 177 178
EQEQ                 : 118
EQUAL                : 54 65 72 73 173 211
FALLTHROUGH          : 
FLOAT                : 86
FOR                  : 200
FUNC                 : 24 76 77
GEQ                  : 123
GG                   : 133
GGEQ                 : 172
GO                   : 
GOTO                 : 219
GREAT                : 121
IDENTIFIER           : 56 57 65 66 75 78 90 98 157 190 226
IF                   : 174
IMAGINARY            : 87
IMPORT               : 227 228
INTEGER              : 85
INTERFACE            : 
LBRACE               : 15 40 182 188
LBRACK               : 12 99 100
LEQ                  : 122
LESS                 : 120
LL                   : 132
LLEQ                 : 171
LMINUS               : 
LPAREN               : 4 30 50 60 68 83 91 101 189 228
MAP                  : 
MINUS                : 125 136
MINUSEQ              : 164
MINUSMIN             : 160
MOD                  : 130
MODEQ                : 167
NOT                  : 139
NOTEQ                : 119
OR                   : 126
OREQ                 : 169
OROR                 : 113
PACKAGE              : 225
PLUS                 : 124 135
PLUSEQ               : 163
PLUSPLUS             : 159
RANGE                : 208
RBRACE               : 15 40 182 188
RBRACK               : 12 99 100
RETURN               : 212
RPAREN               : 4 30 50 60 68 83 91 101 189 228
RUNE                 : 88
SELECT               : 
SEMICOL              : 16 42 51 61 69 175 205 205 220 222 223 229
STRING               : 21 89 235
STRUCT               : 15
SWITCH               : 182 188
TIMES                : 22 128 137
TIMESEQ              : 165
TYPE                 : 59 60 189
TYPEX                : 5
VAR                  : 67 68
error                : 

Nonterminals, with rules where they appear

AddOp                : 116
AliasDecl            : 63
Arguments            : 97
ArrayLength          : 12
ArrayType            : 6
AssignOp             : 162
Assignment           : 154
BaseType             : 22
BasicLit             : 84
BinaryOp             : 108
Block                : 80 147 174 178 200
BreakStmt            : 144
Condition            : 202 207
ConditionBlockOpt    : 200
ConditionOpt         : 205
ConstDecl            : 44
ConstSpec            : 49 51
ConstSpecRep         : 50 51
ContinueStmt         : 145
Conversion           : 93
Declaration          : 47 140
ElementType          : 12
ElseOpt              : 174
ExprCaseClause       : 183
ExprCaseClauseRep    : 182 183
ExprSwitchCase       : 185
ExprSwitchStmt       : 180
Expression           : 13 75 83 91 99 104 105 108 108 109 158 159 160 174 204 208
ExpressionIdentListOpt : 208
ExpressionIdentifier : 210
ExpressionList       : 54 72 73 102 161 161 186 211 213
ExpressionListOpt    : 71
ExpressionListPureOpt : 212
ExpressionListTypeOpt : 101
ExpressionOpt        : 100 100 182
ExpressionRep        : 104 105
ExpressionStmt       : 152
FieldDecl            : 16
FieldDeclRep         : 15 16
ForClause            : 203
ForStmt              : 150
Function             : 76
FunctionBody         : 79
FunctionDecl         : 48
FunctionName         : 76 77
FunctionType         : 9
GotoStmt             : 146
IdentifierList       : 18 34 38 53 71 72
IdentifierOpt        : 189
IdentifierRep        : 56 57
IfStmt               : 148 177
ImportDecl           : 222
ImportDeclRep        : 220 222
ImportPath           : 231
ImportSpec           : 227 229
ImportSpecRep        : 228 229
IncDecStmt           : 153
Index                : 95
Label                : 156 217 219
LabelOpt             : 215 216
LabeledStmt          : 141
Literal              : 81
MulOp                : 117
Operand              : 92
OperandName          : 82
PackageClause        : 220
PackageName          : 225 233
PackageNameDotOpt    : 231
ParameterDecl        : 36 37 37
ParameterDeclCommaRep : 35 36
ParameterListOpt     : 30
Parameters           : 25 28
ParametersList       : 31
PointerType          : 8
PrimaryExpr          : 94 95 96 97 111 189
RangeClause          : 
RelOp                : 115
Result               : 26
ResultOpt            : 25
ReturnStmt           : 143
Selector             : 94
ShortVarDecl         : 155
Signature            : 24 77 79
SimpleStmt           : 142 175 205 205
SimpleStmtOpt        : 188
Slice                : 96
Source               : 1
Statement            : 42 156
StatementList        : 40 185 194
StatementRep         : 41 42
StructType           : 7
SwitchStmt           : 149
Tag                  : 19
TagOpt               : 18
TopLevelDecl         : 223
TopLevelDeclRep      : 220 223
Type                 : 4 10 14 18 23 29 33 34 38 39 65 66 71 91 197 198
TypeCaseClause       : 192
TypeCaseClauseOpt    : 188 192
TypeDecl             : 45
TypeDef              : 64
TypeExprListOpt      : 53
TypeList             : 195
TypeLit              : 3
TypeName             : 2
TypeOpt              : 54
TypeRep              : 197 198
TypeSpec             : 59 61
TypeSpecRep          : 60 61
TypeSwitchCase       : 194
TypeSwitchGuard      : 188
TypeSwitchStmt       : 181
UnaryExpr            : 107 112
UnaryOp              : 112
VarDecl              : 46
VarSpec              : 67 69
VarSpecRep           : 68 69
assign_op            : 161
epsilon              : 11 17 20 27 32 43 52 55 58 62 70 74 103 106 110 151 176 179 184 191 193 199 201 206 209 214 218 221 224 230 234
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . Source
    (220) Source -> . PackageClause SEMICOL ImportDeclRep TopLevelDeclRep
    (225) PackageClause -> . PACKAGE PackageName

    PACKAGE         shift and go to state 2

    PackageClause                  shift and go to state 1
    Source                         shift and go to state 3
    start                          shift and go to state 4

state 1

    (220) Source -> PackageClause . SEMICOL ImportDeclRep TopLevelDeclRep

    SEMICOL         shift and go to state 5


state 2

    (225) PackageClause -> PACKAGE . PackageName
    (226) PackageName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 7

    PackageName                    shift and go to state 6

state 3

    (1) start -> Source .

    $end            reduce using rule 1 (start -> Source .)


state 4

    (0) S' -> start .



state 5

    (220) Source -> PackageClause SEMICOL . ImportDeclRep TopLevelDeclRep
    (221) ImportDeclRep -> . epsilon
    (222) ImportDeclRep -> . ImportDeclRep ImportDecl SEMICOL
    (236) epsilon -> .

    IMPORT          reduce using rule 236 (epsilon -> .)
    FUNC            reduce using rule 236 (epsilon -> .)
    CONST           reduce using rule 236 (epsilon -> .)
    TYPE            reduce using rule 236 (epsilon -> .)
    VAR             reduce using rule 236 (epsilon -> .)
    $end            reduce using rule 236 (epsilon -> .)

    ImportDeclRep                  shift and go to state 9
    epsilon                        shift and go to state 8

state 6

    (225) PackageClause -> PACKAGE PackageName .

    SEMICOL         reduce using rule 225 (PackageClause -> PACKAGE PackageName .)


state 7

    (226) PackageName -> IDENTIFIER .

    STRING          reduce using rule 226 (PackageName -> IDENTIFIER .)
    SEMICOL         reduce using rule 226 (PackageName -> IDENTIFIER .)


state 8

    (221) ImportDeclRep -> epsilon .

    IMPORT          reduce using rule 221 (ImportDeclRep -> epsilon .)
    FUNC            reduce using rule 221 (ImportDeclRep -> epsilon .)
    CONST           reduce using rule 221 (ImportDeclRep -> epsilon .)
    TYPE            reduce using rule 221 (ImportDeclRep -> epsilon .)
    VAR             reduce using rule 221 (ImportDeclRep -> epsilon .)
    $end            reduce using rule 221 (ImportDeclRep -> epsilon .)


state 9

    (220) Source -> PackageClause SEMICOL ImportDeclRep . TopLevelDeclRep
    (222) ImportDeclRep -> ImportDeclRep . ImportDecl SEMICOL
    (223) TopLevelDeclRep -> . TopLevelDeclRep TopLevelDecl SEMICOL
    (224) TopLevelDeclRep -> . epsilon
    (227) ImportDecl -> . IMPORT ImportSpec
    (228) ImportDecl -> . IMPORT LPAREN ImportSpecRep RPAREN
    (236) epsilon -> .

    IMPORT          shift and go to state 13
    FUNC            reduce using rule 236 (epsilon -> .)
    CONST           reduce using rule 236 (epsilon -> .)
    TYPE            reduce using rule 236 (epsilon -> .)
    VAR             reduce using rule 236 (epsilon -> .)
    $end            reduce using rule 236 (epsilon -> .)

    TopLevelDeclRep                shift and go to state 10
    epsilon                        shift and go to state 11
    ImportDecl                     shift and go to state 12

state 10

    (220) Source -> PackageClause SEMICOL ImportDeclRep TopLevelDeclRep .
    (223) TopLevelDeclRep -> TopLevelDeclRep . TopLevelDecl SEMICOL
    (47) TopLevelDecl -> . Declaration
    (48) TopLevelDecl -> . FunctionDecl
    (44) Declaration -> . ConstDecl
    (45) Declaration -> . TypeDecl
    (46) Declaration -> . VarDecl
    (76) FunctionDecl -> . FUNC FunctionName Function
    (77) FunctionDecl -> . FUNC FunctionName Signature
    (49) ConstDecl -> . CONST ConstSpec
    (50) ConstDecl -> . CONST LPAREN ConstSpecRep RPAREN
    (59) TypeDecl -> . TYPE TypeSpec
    (60) TypeDecl -> . TYPE LPAREN TypeSpecRep RPAREN
    (67) VarDecl -> . VAR VarSpec
    (68) VarDecl -> . VAR LPAREN VarSpecRep RPAREN

    $end            reduce using rule 220 (Source -> PackageClause SEMICOL ImportDeclRep TopLevelDeclRep .)
    FUNC            shift and go to state 20
    CONST           shift and go to state 14
    TYPE            shift and go to state 23
    VAR             shift and go to state 21

    TypeDecl                       shift and go to state 19
    VarDecl                        shift and go to state 22
    FunctionDecl                   shift and go to state 15
    TopLevelDecl                   shift and go to state 16
    Declaration                    shift and go to state 17
    ConstDecl                      shift and go to state 18

state 11

    (224) TopLevelDeclRep -> epsilon .

    FUNC            reduce using rule 224 (TopLevelDeclRep -> epsilon .)
    CONST           reduce using rule 224 (TopLevelDeclRep -> epsilon .)
    TYPE            reduce using rule 224 (TopLevelDeclRep -> epsilon .)
    VAR             reduce using rule 224 (TopLevelDeclRep -> epsilon .)
    $end            reduce using rule 224 (TopLevelDeclRep -> epsilon .)


state 12

    (222) ImportDeclRep -> ImportDeclRep ImportDecl . SEMICOL

    SEMICOL         shift and go to state 24


state 13

    (227) ImportDecl -> IMPORT . ImportSpec
    (228) ImportDecl -> IMPORT . LPAREN ImportSpecRep RPAREN
    (231) ImportSpec -> . PackageNameDotOpt ImportPath
    (232) PackageNameDotOpt -> . DOT
    (233) PackageNameDotOpt -> . PackageName
    (234) PackageNameDotOpt -> . epsilon
    (226) PackageName -> . IDENTIFIER
    (236) epsilon -> .

    LPAREN          shift and go to state 25
    DOT             shift and go to state 30
    IDENTIFIER      shift and go to state 7
    STRING          reduce using rule 236 (epsilon -> .)

    ImportSpec                     shift and go to state 26
    epsilon                        shift and go to state 27
    PackageName                    shift and go to state 28
    PackageNameDotOpt              shift and go to state 29

state 14

    (49) ConstDecl -> CONST . ConstSpec
    (50) ConstDecl -> CONST . LPAREN ConstSpecRep RPAREN
    (53) ConstSpec -> . IdentifierList TypeExprListOpt
    (56) IdentifierList -> . IDENTIFIER IdentifierRep

    LPAREN          shift and go to state 32
    IDENTIFIER      shift and go to state 34

    ConstSpec                      shift and go to state 31
    IdentifierList                 shift and go to state 33

state 15

    (48) TopLevelDecl -> FunctionDecl .

    SEMICOL         reduce using rule 48 (TopLevelDecl -> FunctionDecl .)


state 16

    (223) TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl . SEMICOL

    SEMICOL         shift and go to state 35


state 17

    (47) TopLevelDecl -> Declaration .

    SEMICOL         reduce using rule 47 (TopLevelDecl -> Declaration .)


state 18

    (44) Declaration -> ConstDecl .

    SEMICOL         reduce using rule 44 (Declaration -> ConstDecl .)


state 19

    (45) Declaration -> TypeDecl .

    SEMICOL         reduce using rule 45 (Declaration -> TypeDecl .)


state 20

    (76) FunctionDecl -> FUNC . FunctionName Function
    (77) FunctionDecl -> FUNC . FunctionName Signature
    (78) FunctionName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 36

    FunctionName                   shift and go to state 37

state 21

    (67) VarDecl -> VAR . VarSpec
    (68) VarDecl -> VAR . LPAREN VarSpecRep RPAREN
    (71) VarSpec -> . IdentifierList Type ExpressionListOpt
    (72) VarSpec -> . IdentifierList EQUAL ExpressionList
    (56) IdentifierList -> . IDENTIFIER IdentifierRep

    LPAREN          shift and go to state 39
    IDENTIFIER      shift and go to state 34

    VarSpec                        shift and go to state 38
    IdentifierList                 shift and go to state 40

state 22

    (46) Declaration -> VarDecl .

    SEMICOL         reduce using rule 46 (Declaration -> VarDecl .)


state 23

    (59) TypeDecl -> TYPE . TypeSpec
    (60) TypeDecl -> TYPE . LPAREN TypeSpecRep RPAREN
    (63) TypeSpec -> . AliasDecl
    (64) TypeSpec -> . TypeDef
    (65) AliasDecl -> . IDENTIFIER EQUAL Type
    (66) TypeDef -> . IDENTIFIER Type

    LPAREN          shift and go to state 43
    IDENTIFIER      shift and go to state 45

    TypeSpec                       shift and go to state 44
    TypeDef                        shift and go to state 41
    AliasDecl                      shift and go to state 42

state 24

    (222) ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .

    IMPORT          reduce using rule 222 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)
    FUNC            reduce using rule 222 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)
    CONST           reduce using rule 222 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)
    TYPE            reduce using rule 222 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)
    VAR             reduce using rule 222 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)
    $end            reduce using rule 222 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOL .)


state 25

    (228) ImportDecl -> IMPORT LPAREN . ImportSpecRep RPAREN
    (229) ImportSpecRep -> . ImportSpecRep ImportSpec SEMICOL
    (230) ImportSpecRep -> . epsilon
    (236) epsilon -> .

    RPAREN          reduce using rule 236 (epsilon -> .)
    DOT             reduce using rule 236 (epsilon -> .)
    IDENTIFIER      reduce using rule 236 (epsilon -> .)
    STRING          reduce using rule 236 (epsilon -> .)

    epsilon                        shift and go to state 46
    ImportSpecRep                  shift and go to state 47

state 26

    (227) ImportDecl -> IMPORT ImportSpec .

    SEMICOL         reduce using rule 227 (ImportDecl -> IMPORT ImportSpec .)


state 27

    (234) PackageNameDotOpt -> epsilon .

    STRING          reduce using rule 234 (PackageNameDotOpt -> epsilon .)


state 28

    (233) PackageNameDotOpt -> PackageName .

    STRING          reduce using rule 233 (PackageNameDotOpt -> PackageName .)


state 29

    (231) ImportSpec -> PackageNameDotOpt . ImportPath
    (235) ImportPath -> . STRING

    STRING          shift and go to state 49

    ImportPath                     shift and go to state 48

state 30

    (232) PackageNameDotOpt -> DOT .

    STRING          reduce using rule 232 (PackageNameDotOpt -> DOT .)


state 31

    (49) ConstDecl -> CONST ConstSpec .

    SEMICOL         reduce using rule 49 (ConstDecl -> CONST ConstSpec .)


state 32

    (50) ConstDecl -> CONST LPAREN . ConstSpecRep RPAREN
    (51) ConstSpecRep -> . ConstSpecRep ConstSpec SEMICOL
    (52) ConstSpecRep -> . epsilon
    (236) epsilon -> .

    RPAREN          reduce using rule 236 (epsilon -> .)
    IDENTIFIER      reduce using rule 236 (epsilon -> .)

    ConstSpecRep                   shift and go to state 50
    epsilon                        shift and go to state 51

state 33

    (53) ConstSpec -> IdentifierList . TypeExprListOpt
    (54) TypeExprListOpt -> . TypeOpt EQUAL ExpressionList
    (55) TypeExprListOpt -> . epsilon
    (10) TypeOpt -> . Type
    (11) TypeOpt -> . epsilon
    (236) epsilon -> .
    (2) Type -> . TypeName
    (3) Type -> . TypeLit
    (4) Type -> . LPAREN Type RPAREN
    (5) TypeName -> . TYPEX
    (6) TypeLit -> . ArrayType
    (7) TypeLit -> . StructType
    (8) TypeLit -> . PointerType
    (9) TypeLit -> . FunctionType
    (12) ArrayType -> . LBRACK ArrayLength RBRACK ElementType
    (15) StructType -> . STRUCT LBRACE FieldDeclRep RBRACE
    (22) PointerType -> . TIMES BaseType
    (24) FunctionType -> . FUNC Signature

    SEMICOL         reduce using rule 236 (epsilon -> .)
    EQUAL           reduce using rule 236 (epsilon -> .)
    LPAREN          shift and go to state 61
    TYPEX           shift and go to state 57
    LBRACK          shift and go to state 64
    STRUCT          shift and go to state 63
    TIMES           shift and go to state 60
    FUNC            shift and go to state 52

    StructType                     shift and go to state 58
    TypeOpt                        shift and go to state 62
    ArrayType                      shift and go to state 53
    TypeName                       shift and go to state 56
    TypeLit                        shift and go to state 55
    TypeExprListOpt                shift and go to state 65
    epsilon                        shift and go to state 59
    PointerType                    shift and go to state 66
    FunctionType                   shift and go to state 67
    Type                           shift and go to state 54

state 34

    (56) IdentifierList -> IDENTIFIER . IdentifierRep
    (57) IdentifierRep -> . IdentifierRep COMMA IDENTIFIER
    (58) IdentifierRep -> . epsilon
    (236) epsilon -> .

    COMMA           reduce using rule 236 (epsilon -> .)
    LPAREN          reduce using rule 236 (epsilon -> .)
    TYPEX           reduce using rule 236 (epsilon -> .)
    LBRACK          reduce using rule 236 (epsilon -> .)
    STRUCT          reduce using rule 236 (epsilon -> .)
    TIMES           reduce using rule 236 (epsilon -> .)
    FUNC            reduce using rule 236 (epsilon -> .)
    EQUAL           reduce using rule 236 (epsilon -> .)
    SEMICOL         reduce using rule 236 (epsilon -> .)

    epsilon                        shift and go to state 68
    IdentifierRep                  shift and go to state 69

state 35

    (223) TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .

    FUNC            reduce using rule 223 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .)
    CONST           reduce using rule 223 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .)
    TYPE            reduce using rule 223 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .)
    VAR             reduce using rule 223 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .)
    $end            reduce using rule 223 (TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOL .)


state 36

    (78) FunctionName -> IDENTIFIER .

    LPAREN          reduce using rule 78 (FunctionName -> IDENTIFIER .)


state 37
